# spend_trackr

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/spendtrackr/: __init__.py  main.py
src/spendtrackr/apps/auth/: routes.py  schemas.py  service.py
src/spendtrackr/apps/companies/: models.py  schemas.py
src/spendtrackr/apps/users/: models.py  schemas.py
src/spendtrackr/core/: config.py  dependencies.py  security.py
src/spendtrackr/db/: base.py  session.py
